# TrainTickets

./: .gitignore  CMakeLists.txt
program/: CMakeLists.txt
program/src/: main.cpp
